# rust-notes

./: .gitignore  Cargo.toml  rustfmt.toml
application/: Cargo.toml
application/src/: logging.rs  main.rs
controller/: Cargo.toml
controller/src/: error.rs  lib.rs  note.rs  router.rs
migration/: Cargo.toml
migration/src/: create_notes_table.rs  lib.rs
model/: Cargo.toml
model/src/: lib.rs
model/src/dto/: datetime.rs  mod.rs  note.rs  pagination.rs
model/src/entity/: mod.rs  note.rs
repository/: Cargo.toml
repository/src/: database.rs  error.rs  lib.rs  note.rs  sort.rs
service/: Cargo.toml
service/src/: error.rs  lib.rs  note.rs
