[package]
name = "application"
description.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
controller = { workspace = true }
repository = { workspace = true }
migration = { workspace = true }
service = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
