[package]
name = "repository"
description.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
model = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
