[package]
name = "service"
description.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
model = { workspace = true }
repository = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
